add module jdk.incubator.foreign to the notebook image/doc